Fixed some spacing

--- a/less/index.less
+++ b/less/index.less
@@ -168,50 +168,49 @@ header {
 	display:flex;
 	justify-content:space-around;
 	margin-top: 15px;
+	nav {
+		width:100%;
+		display: flex;
+		justify-content: space-around;
+		padding: 0 2%;
+		background:white;
+		border: solid black;
+		overflow: hidden;
+		position: fixed; /* Set the navbar to fixed position */
+		top: 0; /* Position the navbar at the top of the page */
+		max-width: 880px; /* Full width */
+	}
 }
 
-nav {
-	width:100%;
-	display: flex;
-	justify-content: space-around;
-	padding: 0 2%;
-	background:white;
-	border: solid black;
-	overflow: hidden;
-  position: fixed; /* Set the navbar to fixed position */
-  top: 0; /* Position the navbar at the top of the page */
-  max-width: 880px; /* Full width */
-}
 
 
-@media( max-width: 500px ) {
+
+@media @phone {
 	nav {
 		flex-direction:column;
 		align-items: center;
 		padding-bottom: 10px;
 		border-bottom: solid black;
+		a {
+			color:@villains;
+			text-decoration: none;
+			font-size: 2rem;
+			padding: 10px 0;
+			cursor: pointer;
+			@media @phone{
+				margin:5px 0;
+				font-size: 2rem;
+		}	
 	}
 }	
 
 
-nav a {
-	color:@villains;
-	text-decoration: none;
-	font-size: 2rem;
-	padding: 10px 0;
-	cursor: pointer;
-}	
-
-@media( max-width: 500px ) {
-	nav a {
-	margin:10px 0;
-	font-size: 2rem;
-	}
+@media @phone{
 	.lambda {
 		font-size: 1.6rem;
 	}
 	.title {
-		margin-top: 240px;
+		margin-top: 200px;
 	}
 	.Namepic {
 		margin-top: 290px;
@@ -439,4 +438,3 @@ footer {
 	text-align: center;
 	font-weight: bold;
 }
-
